# vmwhere

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-r.txt
.github/workflows/: ci.yml  release.yml
examples/: run_vmwhere_find.sh  run_vmwhere_genotype.sh  run_vmwhere_profile.sh  run_vmwhere_profile_repeats.sh  run_vmwhere_visualize.sh
examples/data/: .gitattributes  A673_sampled_reads.sorted.bam  GCF_009914755.1_T2T-CHM13v2.0_chr6_chr10.fasta  T2T_regions.bed  reference_subset.fna
examples/output/: example_sample_allele_results.csv  example_sample_clustered_results.csv  example_sample_vmwhere_results.tsv  microsatellite_coordinates.bed
src/: __init__.py  __main__.py  call_alleles.py  cluster_reads.py  main.py  pipeline.py  process_reads.py  visualize_region.R
src/vmwhere/: __init__.py  cli.py  find.py  genotyper.py  visualize_region.R
tests/: A673_sampled_reads.sorted.bam.bai  T2T_regions.bed  test_cluster_reads.py  test_decompose_reads.py  test_find.py
