# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[project]
name = "vmwhere"
version = "0.1.0"
description = "Genotyping and sequence-resolved allele calling for tandem repeat regions"
authors = [
    { name = "Sara Peterson", email = "skpet@unc.edu" }
]
requires-python = ">=3.11.9"
dependencies = [
    "pandas==2.1.1",
    "pysam==0.22.1",
    "biopython==1.84",
    "python-Levenshtein==0.27.1"
]
readme = "README.md"
keywords = ["genotyping", "tandem repeats", "sequence decomposition", "ewing sarcoma", "microsatellite"]
license = { text = "Apache-2.0" }

[project.scripts]
vmwhere = "main:vmhere"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/pirl-unc/vmwhere"
"Bug Tracker" = "https://github.com/pirl-unc/vmwhere"

