# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[project]
name = "vmwhere"
dynamic = ["version"]
description = "Genotyping and sequence-resolved allele calling for tandem repeat regions"
authors = [
    { name = "Sara Peterson", email = "skpet@unc.edu" }
]
requires-python = ">=3.12.4"
dependencies = [
    "pandas>=2.2.0",
    "pysam==0.22.1",
    "biopython==1.84",
    "python-Levenshtein==0.27.1"
]
readme = "README.md"
keywords = ["genotyping", "tandem repeats", "sequence decomposition", "ewing sarcoma", "microsatellite"]
license = { text = "Apache-2.0" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0"
]

[project.scripts]
vmwhere = "vmwhere.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
vmwhere = ["chr_mapping_simple.txt", "region_visualization.R"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/vmwhere/_version.py"

[build-system]
requires = ["setuptools", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/pirl-unc/vmwhere"
"Bug Tracker" = "https://github.com/pirl-unc/vmwhere"

